--- a/solrconf/pom.xml
+++ b/solrconf/pom.xml
@@ -49,8 +49,8 @@
                   <groupId>org.sakaiproject.nakamura</groupId>
                   <artifactId>org.sakaiproject.nakamura.search.impl</artifactId>
                   <version>${nakamura.version}</version>
-                  <outputDirectory>${project.build.directory}/extracted-resources</outputDirectory>
-                  <includes>SLING-INF/home/solr/schema.xml</includes>
+                  <outputDirectory>${project.build.directory}/generated-resources</outputDirectory>
+                  <includes>SLING-INF/home/solr/*</includes>
                 </artifactItem>
               </artifactItems>
             </configuration>
@@ -73,14 +73,21 @@
             <phase>process-resources</phase>
             <configuration>
               <target>
-                <mkdir dir="${project.build.directory}/processed-resources/SLING-INF/home/solr"/>
                 <taskdef name="xmltask" classname="com.oopsconsultancy.xmltask.ant.XmlTask" classpathref="maven.plugin.classpath"/>
                 <xmltask
-                  source="${project.build.directory}/extracted-resources/SLING-INF/home/solr/schema.xml"
-                  dest="${project.build.directory}/processed-resources/SLING-INF/home/solr/schema.xml"
+                  source="${project.build.directory}/generated-resources/SLING-INF/home/solr/schema.xml"
+                  dest="${project.build.directory}/generated-resources/SLING-INF/home/solr/schema.xml"
                   preservetype="true">
                   <insert path="/schema/fields/field[last()]" position="after" file="schema.xml.fields.txt"/>
                 </xmltask>
+                <!-- For embedded Solr -->
+                <copy todir="${project.build.directory}/processed-resources">
+                  <fileset dir="${project.build.directory}/generated-resources"/>
+                </copy>
+                <!-- For remote Solr -->
+                <copy todir="${project.build.directory}/processed-resources/solr/conf">
+                  <fileset dir="${project.build.directory}/generated-resources/SLING-INF/home/solr"/>
+                </copy>
               </target>
             </configuration>
             <goals>
@@ -91,14 +98,4 @@
       </plugin>
     </plugins>
   </build>
-  <dependencies>
-    <dependency>
-      <groupId>org.apache.felix</groupId>
-      <artifactId>org.osgi.core</artifactId>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.felix</groupId>
-      <artifactId>org.osgi.compendium</artifactId>
-    </dependency>
-  </dependencies>
 </project>
