--- a/pom.xml
+++ b/pom.xml
@@ -443,7 +443,7 @@
       <dependency>
         <groupId>org.sakaiproject.nakamura</groupId>
         <artifactId>org.sakaiproject.nakamura.core</artifactId>
-        <version>1.3-20120228</version>
+        <version>1.3.1</version>
         <scope>provided</scope>
       </dependency>
       <dependency>
