--- a/configs/localhost/load/org.apache.sling.commons.log.LogManager.factory.config-debug.config
+++ b/configs/localhost/load/org.apache.sling.commons.log.LogManager.factory.config-debug.config
@@ -1,3 +1,3 @@
 org.apache.sling.commons.log.pattern="{0,date,dd.MM.yyyy HH:mm:ss.SSS} *{4}* [{2}] {3} {5}"
-org.apache.sling.commons.log.names=["org.sakaiproject.nakamura.casauth"]
+org.apache.sling.commons.log.names=["org.sakaiproject.nakamura.casauth","org.apache.sling.servlets.post.impl.operations","org.apache.jackrabbit.core.data","org.apache.jackrabbit.core.fs","org.apache.jackrabbit.core.persistence"]
 org.apache.sling.commons.log.level="debug"
