--- a/solrserver/pom.xml
+++ b/solrserver/pom.xml
@@ -28,8 +28,9 @@
             </goals>
             <configuration>
               <includeArtifactIds>edu.berkeley.myberkeley.solrjar</includeArtifactIds>
-              <outputDirectory>${working.dir}</outputDirectory>
-              <overWriteIfNewer>false</overWriteIfNewer>
+              <outputDirectory>${project.build.directory}/solrjar</outputDirectory>
+              <overWriteReleases>true</overWriteReleases>
+              <overWriteSnapshots>true</overWriteSnapshots>
             </configuration>
           </execution>
           <execution>
@@ -40,7 +41,7 @@
             </goals>
             <configuration>
               <includeArtifactIds>edu.berkeley.myberkeley.solrconf</includeArtifactIds>
-              <outputDirectory>${working.dir}</outputDirectory>
+              <outputDirectory>${project.build.directory}/solrconf</outputDirectory>
               <includes>solr/conf/*.xml</includes>
               <overWriteReleases>true</overWriteReleases>
               <overWriteSnapshots>true</overWriteSnapshots>
@@ -58,6 +59,13 @@
             <goals><goal>run</goal></goals>
             <configuration>
               <target>
+                <mkdir dir="${working.dir}"/>
+                <copy verbose="true" todir="${working.dir}" overwrite="false">
+                    <fileset dir="${project.build.directory}/solrjar"/>
+                </copy>
+                <copy verbose="true" todir="${working.dir}" overwrite="true">
+                  <fileset dir="${project.build.directory}/solrconf"/>
+                </copy>
                 <copy todir="${working.dir}">
                   <fileset dir="${basedir}/src/main/resources"/>
                 </copy>
