--- a/solrserver/src/main/resources/sling/config/org/sakaiproject/nakamura/solr/RemoteSolrClient.config
+++ b/solrserver/src/main/resources/sling/config/org/sakaiproject/nakamura/solr/RemoteSolrClient.config
@@ -1,2 +1,2 @@
-service.pid="org.sakaiproject.nakamura.solr.RemoteSolrClient.config"
+service.pid="org.sakaiproject.nakamura.solr.RemoteSolrClient"
 socket.timeout=I"6000"
